src/objects/Conventional_Debt_Payment_Balance__c.object
<CustomObject>
    <description>LPAM - Payment for a Conventional Debt and also the balance</description>
    <fields>
        <fullName>Accrued_Interest__c</fullName>
        <label>Accrued Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Financial__c</fullName>
        <inlineHelpText>Select the Financial Statement to apply this payment to</inlineHelpText>
        <label>Actual Financial</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipName>Conventional_Debt_Payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Interest__c +  Principle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conventional_Debt__c</fullName>
        <label>Conventional Debt</label>
        <referenceTo>Conventional_Debt__c</referenceTo>
        <relationshipName>Conventional_Debt_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Principle__c</fullName>
        <label>Outstanding Principle</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principle__c</fullName>
        <label>Principle</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Balance__c</fullName>
        <label>Total Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Conventional Debt Payment/Balance</label>
    <nameField>
        <displayFormat>DebtPMT-{00000}</displayFormat>
        <label>Conventional Debt Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conventional Debt Payments/Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>